<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notificationEditText"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:hint="@string/input_notification_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/datePickButton"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <Button
        android:id="@+id/timePickButton"
        android:layout_width="match_parent"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:text="@string/choose_time"
        app:layout_constraintTop_toBottomOf="@id/datePickButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmNotificationFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:backgroundTint="@color/colorNormalOlive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check" />

</androidx.constraintlayout.widget.ConstraintLayout>